# Universe-Demo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake
assets/font/: bahnschrift.fnt
assets/shaders/: galaxy_mask_fragment.hxasset  galaxy_mask_near_compute.hxasset  galaxy_mask_vertex.hxasset  ico_terrain_gen_compute.hxasset  icosahedron_lod_compute.hxasset  planet_texture_gen_compute.hxasset  planets_far_mask_fragment.hxasset  planets_far_mask_vertex.hxasset  planets_near_mask_fragment.hxasset  planets_near_mask_vertex.hxasset  postprocess_pass_fragment.hxasset  rings_mask_fragment.hxasset  rings_mask_vertex.hxasset  sdf_font_render_pass_compute.hxasset  solar_system_planets_mask_fragment.hxasset  solar_system_planets_mask_vertex.hxasset  stars_mask_fragment.hxasset  stars_mask_vertex.hxasset  stars_particles_compute.hxasset  terrain_texture_gen_compute.hxasset  universe_taa_pass_fragment.hxasset
ext/: HexoGraphics.h  HexoInput.h
ext/glm/: CMakeLists.txt
inc/: main.h  renderers.h  structs.h  ui.h  utils.h
lib/: HexoGraphics.lib  HexoInput.lib  freetyped.lib
shd/: cluster_mask.glsl  galaxy_mask_near.glsl  galaxy_renderer.glsl  galaxy_shape_gen.inl.glsl  planet_raytracer.glsl  planets_far_mask.glsl  planets_near_mask.glsl  postprocess_pass.glsl  shd_compile.args  solar_system_planets_mask.glsl  stars_mask.glsl  stars_particles.glsl  universe_gen.inl.glsl  universe_taa_pass.glsl
shd/galaxy/: galaxy_mask.glsl  (+1 more)
src/: Application.cpp  Camera.cpp  StaticParticleGrid.cpp  Universe.cpp  main.cpp  renderers.cpp  ui.cpp
(+23 files in other folders)
